# simple-cmake-template

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile.cpp-dev-env  devcontainer.json
app/: CMakeLists.txt  app.c  app.cpp
